<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/viewpager">
        </androidx.viewpager.widget.ViewPager>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:textColor="@color/black"
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:src="@drawable/onboard_page3"
            android:layout_marginTop="0dp"/>
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:src="@drawable/logo_3" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="51dp">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/update_fullname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:gravity="center">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="12dp"
                android:src="@drawable/mail" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:background="@null"
                 android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_gravity="center"
                android:hint="username_hint_login"
                android:singleLine="true"
                android:maxLength="30"
                android:textColor="@color/black"
                android:textColorHint="@color/seceondry_color"
                android:textSize="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="51dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:gravity="center">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="12dp"
                android:src="@drawable/lock" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:background="@null"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:hint="@string/logn_passworhint"

                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/seceondry_color"
                android:textSize="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
<TextView
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_marginTop="10dp"
    android:text="@string/loginpassword_hit"
    android:layout_height="wrap_content"></TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/gradient_intro_button"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_login"

        android:id="@+id/login"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/social"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:id="@+id/fb"
            android:src="@drawable/ic_facebook"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            />
        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/ic_instagram"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:visibility="gone"
            />
        <ImageView
            android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:src="@drawable/ic_google"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        />
        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
        <ImageView
        android:layout_width="0dp"
            android:id="@+id/twitter"
        android:src="@drawable/ic_twitter"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        />
        <ImageView
            android:layout_width="0dp"
            android:id="@+id/iv_phone"
            android:src="@drawable/ic_phone_android_black_24dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/forget"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_forget_pass"
            android:textSize="18dp"
            android:textColor="@color/grey"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/signup"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Signup_link"
            android:textStyle="italic"
            android:textSize="18dp"
            android:textColor="@color/blue"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>